Division por componentes y muestra datos de lista izquierda

--- a/src/app/componentes/menu/template.html
+++ b/src/app/componentes/menu/template.html
@@ -1,5 +1,14 @@
-<div class="menu">
-    <ul>
-        <li><a ui-sref="{{ item.state }}" ng-repeat="item in $ctrl.items">{{ item.nombre }} </a></li>
-    </ul>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#" style="font-weight: bold; font-size: x-large;">J</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+	
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		  <ul class="navbar-nav mr-auto">
+			<li class="nav-item active" ui-sref="{{ item.state }}" ng-repeat="item in $ctrl.items">
+			  <a class="nav-link">{{ item.nombre }}</a>
+			</li>
+		   </ul>
+		</div>
+</nav>
