--- a/src/app/paginas/inicio/template.html
+++ b/src/app/paginas/inicio/template.html
@@ -1,1 +1,29 @@
-<h1>INICIO</h1>
+
+<menu></menu>
+<div class="p-3">
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-2">
+			<lista></lista>
+		</div>
+		<div class="col-md-8">
+			<div class="row">
+				<div class="col-md-1">
+				</div>
+				<div class="col-md-3">
+				</div>
+				<div class="col-md-2">
+				</div>
+				<div class="col-md-2">
+				</div>
+				<div class="col-md-2">
+				</div>
+				<div class="col-md-2">
+				</div>
+			</div>
+		</div>
+		<div class="col-md-2">
+		</div>
+	</div>
+</div>
+</div>
