--- a/src/app/componentes/menu/template.html
+++ b/src/app/componentes/menu/template.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#" style="font-weight: bold; font-size: x-large;">J</a>
+		<a class="navbar-brand" href="#">
+				<img src="../.././../logo.png" width="30" height="30" alt="">
+		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
