--- a/src/app/componentes/menu/template.html
+++ b/src/app/componentes/menu/template.html
@@ -1,16 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">
-				<img src="../.././../logo.png" width="30" height="30" alt="">
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-		</button>
-	
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		  <ul class="navbar-nav mr-auto">
-			<li class="nav-item active" ui-sref="{{ item.state }}" ng-repeat="item in $ctrl.items">
-			  <a class="nav-link">{{ item.nombre }}</a>
-			</li>
-		   </ul>
-		</div>
+    <a class="navbar-brand" href="#">
+        <img src="../.././../logo.png" width="30" height="30" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="{{item.nombre == 'LIVE' ? 'nav-item active' : 'nav-item'}}" ui-sref="{{ item.state }}" ng-repeat="item in $ctrl.items">
+                <a class="nav-link">{{ item.nombre }}</a>
+            </li>
+        </ul>
+    </div>
 </nav>
