--- a/src/app/paginas/inicio/template.html
+++ b/src/app/paginas/inicio/template.html
@@ -1,29 +1,51 @@
-
 <menu></menu>
 <div class="p-3">
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-2">
-			<lista></lista>
-		</div>
-		<div class="col-md-8">
-			<div class="row">
-				<div class="col-md-1">
-				</div>
-				<div class="col-md-3">
-				</div>
-				<div class="col-md-2">
-				</div>
-				<div class="col-md-2">
-				</div>
-				<div class="col-md-2">
-				</div>
-				<div class="col-md-2">
-				</div>
-			</div>
-		</div>
-		<div class="col-md-2">
-		</div>
-	</div>
-</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2">
+                <lista></lista>
+            </div>
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-1">
+                        0
+                    </div>
+                    <div class="col-md-3">
+                        CF Mnteterry
+                    </div>
+                    <div class="col-md-2">
+                        PK -140
+                    </div>
+                    <div class="col-md-2">
+                        +157
+                    </div>
+                    <div class="col-md-2">
+                        01 - 199
+                    </div>
+                    <div class="col-md-2">
+                        *
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2 ">
+                <div class="col-md-12 p-1 mb-1 bg-secondary text-white">
+                    <h5 class="text-center p-1 mb-1 bg-primary text-white">
+                        BETSLIP
+                    </h5>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="text-center">
+                                Quickbet
+                            </p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="text-center ">
+                                Straight
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
