La tabla reacciona a los datos del componente de lista, y se implementa la funcion de mas

--- a/src/app/paginas/inicio/template.html
+++ b/src/app/paginas/inicio/template.html
@@ -1,33 +1,16 @@
-<menu></menu>
+<menu style="padding-left: 0px;"></menu>
 <div class="p-3">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2">
                 <lista></lista>
             </div>
-            <div class="col-md-8">
-                <div class="row">
-                    <div class="col-md-1">
-                        0
-                    </div>
-                    <div class="col-md-3">
-                        CF Mnteterry
-                    </div>
-                    <div class="col-md-2">
-                        PK -140
-                    </div>
-                    <div class="col-md-2">
-                        +157
-                    </div>
-                    <div class="col-md-2">
-                        01 - 199
-                    </div>
-                    <div class="col-md-2">
-                        *
-                    </div>
-                </div>
+
+            <div class="col-md-7">
+                <tabla></tabla>
             </div>
-            <div class="col-md-2 ">
+
+            <div class="col-md-3">
                 <div class="col-md-12 p-1 mb-1 bg-secondary text-white">
                     <h5 class="text-center p-1 mb-1 bg-primary text-white">
                         BETSLIP
