--- a/src/app/componentes/lista/template.html
+++ b/src/app/componentes/lista/template.html
@@ -48,7 +48,7 @@
                     <div class="card">
                         <div class="card-header p-0">
                             <button class="btn btn-link" type="button" data-toggle="collapse"
-                                    data-target="{{'#A' + liga.id}}">
+                                    data-target="{{'#A' + liga.id}}" ng-click="$ctrl.enviarTabla(list, pais, liga)">
                                 <i class="{{liga.icon}}"></i>
                                 {{liga.nombreLiga}}
                             </button>
