--- a/src/app/componentes/menu/template.html
+++ b/src/app/componentes/menu/template.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
     <a class="navbar-brand" href="#">
         <img src="../.././../logo.png" width="30" height="30" alt="">
     </a>
