--- a/src/app/componentes/lista/template.html
+++ b/src/app/componentes/lista/template.html
@@ -23,35 +23,48 @@
     <!--primero-->
     <div class="card" ng-repeat="list in $ctrl.listaJuegos">
 
-        <div class="card-header p-0">
-            <button class="btn btn-link" type="button" data-toggle="collapse"
+        <div class="d-flex justify-content-start">
+            <button class="btn btn-light btn-block text-left " type="button" data-toggle="collapse"
                     data-target="{{'#collapseOne' + list.id}}">
                 <i class="{{list.icon}}"></i>
                 {{list.deporte}}
             </button>
         </div>
 
+
         <div ng-repeat="pais in list.listaPaises" id="{{'collapseOne' + list.id}}" class="collapse">
             <!--segundo-->
             <div class="card">
-                <div class="card-header p-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse"
+
+                    <button class="btn btn-light btn-block text-left bg-secondary text-white" type="button" data-toggle="collapse"
                             data-target="{{'#collapseTwo' + pais.nombrePais}}">
                         <i class="{{pais.icon}}"></i>
                         {{pais.nombrePais}}
                     </button>
-                </div>
+
+
                 <div ng-repeat="liga in pais.ligas" id="{{'collapseTwo' + pais.nombrePais}}" class="collapse"
                      data-parent="#accordionExample">
 
                     <!--tercero-->
                     <div class="card">
-                        <div class="card-header p-0">
-                            <button class="btn btn-link" type="button" data-toggle="collapse"
-                                    data-target="{{'#A' + liga.id}}" ng-click="$ctrl.enviarTabla(list, pais, liga)">
-                                <i class="{{liga.icon}}"></i>
-                                {{liga.nombreLiga}}
+                        <div class="card-header p-0 d-flex justify-content-between" >
+                            <button class="btn btn-link" type="button"
+                                    data-toggle="collapse"
+                                    data-target="{{'#A' + liga.id}}">
+
+                                    <div>
+                                        <i class="{{liga.icon}}"></i>
+                                        {{liga.nombreLiga}}
+                                    </div>
                             </button>
+
+
+                            <button type="button" ng-click="$ctrl.enviarTabla(list, pais, liga)" class="btn btn-light btn-sm">
+                                <i class="far fa-eye"></i>
+                            </button>
+
+
                         </div>
                         <div ng-repeat="juego in liga.juegos" id="{{'A' + liga.id}}" class="collapse">
                             <a class="list-group-item list-group-item-action">
