--- a/src/app/componentes/tabla/template.html
+++ b/src/app/componentes/tabla/template.html
@@ -26,7 +26,7 @@
                                 <button type="button" class="btn btn-sm btn-outline-secondary">+{{tabla.numerPos}}</button>
                             </th>
                             <th>
-                                <button type="button" ng-click="$ctrl.mostrarInfo(tabla)" class="btn btn-sm btn-warning"><i class="fas fa-chevron-right"></i></button>
+                                <button type="button" ng-click="$ctrl.mostrarInfo(tabla)" class="btn btn-sm btn-warning"><i class="fas fa-plus"></i></button>
                             </th>
                         </tr>
 
