--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -19,10 +19,8 @@
     </ion-row>
   </ion-grid>  
   
+  <ion-button (click)="logout()">Log out</ion-button>
+
   
 </ion-content>
-<ion-footer (click)="logout()">
-  <ion-toolbar color="secondary">
-    <ion-title>Log out</ion-title>
-  </ion-toolbar>
-</ion-footer>
+
