--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,6 +16,10 @@
       <ion-card-content>
         <p>shaksoi. Check out some of the resources below for next steps.</p>
       </ion-card-content>
+
+      <ion-button (click)="enviar()" >ENVIAR</ion-button>
+
+
     </ion-card>
     <ion-list lines="none">
       <ion-list-header>
@@ -39,3 +43,22 @@
       </ion-item>
     </ion-list>
 </ion-content>
+
+<!-- <ion-menu side="start" menuId="first" contentId="main">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Start Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item>Menu Item</ion-item>
+      <ion-item>Menu Item</ion-item>
+      <ion-item>Menu Item</ion-item>
+      <ion-item>Menu Item</ion-item>
+      <ion-item>Menu Item</ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-router-outlet id="main"></ion-router-outlet> -->
