--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,27 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+
+  <ion-menu side="start" menuId="first" contentId="main">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Menu Principal</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item>Inicio</ion-item>
+        <ion-item>Canchas</ion-item>
+        <ion-item>Torneo</ion-item>
+        <ion-item>Facturas</ion-item>
+        <ion-item>Mis Equipos</ion-item>
+        <ion-item>Mis Perfil.</ion-item>
+        
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+
+
+
+
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
