cambio de iconos, estructura, pagina de inicio, botones, menu

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>Home</ion-title>
-    <ion-buttons slot="start">
+    <ion-buttons color="light" slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button>
-        <ion-icon name="person"></ion-icon>
+        <ion-icon style="font-size: 25px;" md="person-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -15,12 +15,12 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="retos">
-      <ion-icon name="football"></ion-icon>
+      <ion-icon md="football"></ion-icon>
       <ion-label>Retos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="retos">
-      <ion-icon name="newspaper"></ion-icon>
+      <ion-icon md="newspaper"></ion-icon>
       <ion-label>Noticias</ion-label>
     </ion-tab-button>
 
