--- a/src/app/pages/retos/retos.page.html
+++ b/src/app/pages/retos/retos.page.html
@@ -6,6 +6,11 @@
 
 <ion-content>
 
-  retos
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" style="color:white">
+    <ion-fab-button (click)="mostrarModal()">
+      <ion-icon md="add-circle-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 
 </ion-content>
