--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<ion-app>
-
-  <ion-menu side="start" menuId="first" contentId="main">
+<!-- <ion-app> -->
+ <!--  <ion-menu side="start" menuId="first" contentId="main">
     <ion-header>
       <ion-toolbar color="primary">
         <ion-title>Menu Principal</ion-title>
@@ -8,20 +7,50 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-item>Inicio</ion-item>
+        <ion-item>Solicitar Reto</ion-item>
         <ion-item>Canchas</ion-item>
         <ion-item>Torneo</ion-item>
         <ion-item>Facturas</ion-item>
         <ion-item>Mis Equipos</ion-item>
-        <ion-item>Mis Perfil.</ion-item>
-        
+        <ion-item>Mis Perfil</ion-item>
       </ion-list>
     </ion-content>
-  </ion-menu>
+  </ion-menu> -->
 
 
 
-
-
+<!-- 
   <ion-router-outlet id="main"></ion-router-outlet>
+</ion-app> -->
+
+
+
+<ion-app>
+  <ion-split-pane contentId="main-content">
+    <ion-menu contentId="main-content" type="overlay">
+      <ion-content>
+        <ion-list id="inbox-list">
+          <ion-list-header>Inbox</ion-list-header>
+          <ion-note>hi@ionicframework.com</ion-note>
+
+          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
+            <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
+              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+              <ion-label>{{ p.title }}</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+
+        <ion-list id="labels-list">
+          <ion-list-header>Labels</ion-list-header>
+
+          <ion-item *ngFor="let label of labels" lines="none">
+            <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
+            <ion-label>{{ label }}</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+    <ion-router-outlet id="main-content"></ion-router-outlet>
+  </ion-split-pane>
 </ion-app>
