--- a/src/app/pages/retos/retos.page.html
+++ b/src/app/pages/retos/retos.page.html
@@ -6,11 +6,10 @@
 
 <ion-content>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" style="color:white">
-    <ion-fab-button (click)="mostrarModal()">
-      <ion-icon md="add-circle-outline"></ion-icon>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="mostrarModal()" color="secondary">
+      <ion-icon md="add-circle-sharp"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-
 
 </ion-content>
