--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -3,19 +3,19 @@
 
     <ion-list-header class="ion-text-start">YEISON PICADO ABARCA</ion-list-header>
 
-    <ion-item (click)="wifiSetting()">
+    <ion-item button (click)="wifiSetting()">
       <ion-icon slot="start" md="person-sharp"></ion-icon>
       Perfil
     </ion-item>
-    <ion-item (click)="eventFromPopover()()">
+    <ion-item button>
       <ion-icon slot="start" md="football-sharp"></ion-icon>
       Equipo
     </ion-item>
-    <ion-item (click)="eventFromPopover()()">
+    <ion-item button>
       <ion-icon slot="start" md="settings-sharp"></ion-icon>
       Configuración
     </ion-item>
-    <ion-item (click)="logout()">
+    <ion-item button (click)="logout()">
       <ion-icon slot="start" md="log-out-sharp"></ion-icon>
       Cerrar Sesión
     </ion-item>
