--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,7 +13,7 @@
   --ion-color-primary-tint: #4c8c4a;
 
   /** secondary **/
-  --ion-color-secondary: #004d40;
+  --ion-color-secondary: #003300;
   --ion-color-secondary-rgb: 50,219,100;
   --ion-color-secondary-contrast: #fff;
   --ion-color-secondary-contrast-rgb: 255,255,255;
