--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Home</ion-title>
+    <ion-title>Soccer Match</ion-title>
     <ion-buttons color="light" slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -19,9 +19,10 @@
       <ion-label>Retos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="retos">
+    <ion-tab-button tab="noticias">
       <ion-icon md="newspaper"></ion-icon>
       <ion-label>Noticias</ion-label>
+      <ion-badge>6</ion-badge>
     </ion-tab-button>
 
   </ion-tab-bar>
