--- a/src/app/pages/maintenance/cancha/cancha.page.html
+++ b/src/app/pages/maintenance/cancha/cancha.page.html
@@ -1,21 +1,16 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button  [text]="" defaultHref="home"></ion-back-button>
+      <ion-back-button  [text]="''" defaultHref="home"></ion-back-button>
     </ion-buttons>
     <ion-title>Canchas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-
-
   <ion-card>
-
     <ion-card-content>
-
       <ion-list>
-
         <ion-item *ngFor="let cancha of canchas">
           <ion-avatar slot="start">
             <img src="../../../../assets/img/cancha.jpg">
@@ -24,12 +19,9 @@
             <h2>{{cancha.nombre}}</h2>
             <h3></h3>
             <p>{{cancha.direccion}}</p>
-
             <div horizontal="end">
               <ion-button>Editar</ion-button>
             </div>
-            
-            
           </ion-label>
         </ion-item>
 
