--- a/src/app/pages/retos/retos.page.html
+++ b/src/app/pages/retos/retos.page.html
@@ -7,7 +7,7 @@
 <ion-content>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="mostrarModal()" color="secondary">
+    <ion-fab-button (click)="mostrarModal()" color="">
       <ion-icon md="add-circle-sharp"></ion-icon>
     </ion-fab-button>
   </ion-fab>
