Compilo codigo parametro de produccion --prod

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,7 +5,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="settingsPopover()" >
+      <ion-button (click)="settingsPopover($event)" >
         <ion-icon style="font-size: 25px;" md="person-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
