--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding id="contenido">
+<ion-content class="ion-padding" id="contenido">
 
 {{titulo}}
 
