--- a/src/app/pages/retos/retos.page.html
+++ b/src/app/pages/retos/retos.page.html
@@ -6,6 +6,17 @@
 
 <ion-content>
 
+
+  <!-- <div style="height:30%;
+  background-color: #003300;
+  border-radius: 0 0 70px 70px;
+  ">
+  </div>
+
+  <ion-button >
+    BUSCAR
+  </ion-button> -->
+
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="mostrarModal()" color="">
       <ion-icon md="add-circle-sharp"></ion-icon>
