--- a/src/app/components/crear-reto/crear-reto.component.html
+++ b/src/app/components/crear-reto/crear-reto.component.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
+  <ion-card *ngIf="canchas.length == 0">
     <ion-card-header class="ion-text-center">
       <ion-card-title>Parámetros</ion-card-title>
     </ion-card-header>
@@ -42,6 +42,35 @@
     </ion-card-content>
   </ion-card>
 
+
+  <ion-card *ngIf="canchas.length > 0">
+
+  <ion-button (click)="canchas = []" class="ion-padding" expand="block" color="secondary">VOLVER</ion-button>
+
+  <ion-row class="ion-padding-top" *ngFor="let cancha of canchas">
+    <ion-col size="6">
+      <div class="ion-text-center">
+      <img height="100" width="100" src="../../../../assets/img/cancha.jpg">
+      <h4 class="ion-no-margin">{{cancha.nombre}}</h4>
+      <p class="ion-text-start" class="ion-no-margin">Direcion: {{cancha.direccion}}</p>
+     </div>
+    </ion-col>
+    <ion-col size="6">
+      <div class="ion-text-start">
+        <p class="ion-no-margin">Parqueo: SI</p>
+        <p class="ion-no-margin">Bestidor: SI</p>
+        <p class="ion-no-margin">Uniforme: NO</p>
+        <p class="ion-no-margin">Costo equipo: ₡10,000</p>
+        <p class="ion-no-margin">Método de Pago: en sitio</p>
+        <div class="ion-padding-top">
+          <ion-button fill="outline" slot="end">
+            Solicitar
+          </ion-button>
+        </div>
+      </div>
+    </ion-col>
+  </ion-row>
+  </ion-card>
 
 
 </ion-content>
