--- a/src/app/components/crear-reto/crear-reto.component.html
+++ b/src/app/components/crear-reto/crear-reto.component.html
@@ -18,7 +18,7 @@
     <ion-card-content>
 
       <ion-item>
-        <ion-label>Provincia</ion-label>
+        <ion-label position="floating">Provincia</ion-label>
         <ion-select [(ngModel)]="codProvincia" (ionChange)="changeProvincia()" 
         interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
           <ion-select-option *ngFor="let ubi of ubicacion" value="{{ubi.codigoProvincia}}">{{ubi.descripcion}}</ion-select-option>
@@ -27,21 +27,20 @@
     
 
       <ion-item *ngIf="provincia">
-        <ion-label>Cantón</ion-label>
+        <ion-label position="floating">Cantón</ion-label>
         <ion-select [(ngModel)]="codCanton" interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
           <ion-select-option *ngFor="let cant of provincia.canton" value="{{cant.codigoCanton}}">{{cant.descripcion}}</ion-select-option>
         </ion-select>
       </ion-item>
 
       <ion-item>
-        <ion-label>Fecha y Hora</ion-label>
-        <ion-datetime cancelText="Cancelar" doneText="Aceptar" displayFormat="D MMM YYYY h a" min="2019"></ion-datetime>
+        <ion-label position="floating">Fecha y Hora</ion-label>
+        <ion-datetime [(ngModel)]="fechaBuscar" cancelText="Cancelar" doneText="Aceptar" displayFormat="D MMM YYYY H"></ion-datetime>
       </ion-item>
       <ion-button (click)="buscarCanchas()" class="ion-padding" expand="block" color="secondary">BUSCAR</ion-button>
       <br>
     </ion-card-content>
   </ion-card>
-
 
   <ion-card *ngIf="canchas.length > 0">
 
@@ -57,6 +56,7 @@
     </ion-col>
     <ion-col size="6">
       <div class="ion-text-start">
+        <p class="ion-no-margin">Árbitro: NO</p>
         <p class="ion-no-margin">Parqueo: SI</p>
         <p class="ion-no-margin">Bestidor: SI</p>
         <p class="ion-no-margin">Uniforme: NO</p>
