--- a/src/app/pages/maintenance/cancha/cancha.page.html
+++ b/src/app/pages/maintenance/cancha/cancha.page.html
@@ -19,56 +19,21 @@
             <h2>{{cancha.nombre}}</h2>
             <h3></h3>
             <p>{{cancha.direccion}}</p>
-            <div horizontal="end">
-              <ion-button>Editar</ion-button>
-            </div>
           </ion-label>
+          <ion-button fill="outline" slot="end">
+            Editar
+          </ion-button>
         </ion-item>
-
       </ion-list>
-
-      
-
-      <!-- <form class="form" [formGroup]="validationsForm"  (ngSubmit)="loginUser(validationsForm.value)">
-
-        <ion-item>
-          <ion-label  position="floating" color="primary">Email</ion-label>
-          <ion-input type="text" formControlName="email"></ion-input>
-        </ion-item>
-        <div class="validation-errors">
-          <ng-container *ngFor="let validation of validationMessages.email">
-            <div class="error-message" *ngIf="validationsForm.get('email').hasError(validation.type) && (validationsForm.get('email').dirty || validationsForm.get('email').touched)">
-              {{ validation.message }}
-            </div>
-          </ng-container>
-        </div>
-    
-        <ion-item>
-          <ion-label  position="floating" color="primary">Password</ion-label>
-          <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
-        </ion-item>
-        <div class="validation-errors">
-          <ng-container *ngFor="let validation of validationMessages.password">
-            <div class="error-message" *ngIf="validationsForm.get('password').hasError(validation.type) && (validationsForm.get('password').dirty || validationsForm.get('password').touched)">
-              {{ validation.message }}
-            </div>
-          </ng-container>
-        </div>
-    
-        <ion-button  class="submit-btn" type="submit"  [disabled]="!validationsForm.valid">Log In</ion-button>
-    
-        <label class="error-message">{{errorMessage}}</label>
-      </form> -->
-
-
     </ion-card-content>
   </ion-card>
 
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="crearCanchaPrueba()" color="secondary">
+    <ion-fab-button (click)="mostrarModal()" color="secondary">
       <ion-icon md="add-circle-sharp"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
 </ion-content>
+
