--- a/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
+++ b/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
@@ -10,7 +10,100 @@
 </ion-header>
 
 
+
 <ion-content>
+
+
+    <ion-card class="ion-text-center" *ngIf="!isUploading && !isUploaded">
+      <ion-card-header>
+        <ion-card-title>Foto de la chancha</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <div class="fileUpload btn btn-primary">
+          <input
+            id="uploadBtn"
+            type="file"
+            class="upload"
+            (change)="uploadFile($event.target.files)"
+          />
+        </div>
+      </ion-card-content>
+    </ion-card>
+    <ion-card class="ion-text-center" *ngIf="isUploading && !isUploaded">
+      <ion-card-header>
+        <ion-card-title
+          >Archivo selecionado:<b>{{ fileName }}</b></ion-card-title
+        >
+      </ion-card-header>
+   
+      <ion-card-content>
+        <div *ngIf="percentage | async as pct">
+          Progreso: {{ pct | number }}%
+          <ion-progress-bar value="{{ pct / 100 }}"></ion-progress-bar>
+        </div>
+        <div *ngIf="snapshot | async as snap">
+          Tamaño del archivo: {{ snap.totalBytes | fileSizePipe }} Transferido:
+          {{ snap.bytesTransferred | fileSizePipe }}
+          <div *ngIf="snapshot && snap.bytesTransferred != snap.totalBytes">
+            <ion-button
+              color="warning"
+              size="small"
+              (click)="task.pause()"
+              class="button is-warning"
+              >Pausar</ion-button
+            >
+            <ion-button
+              size="small"
+              (click)="task.resume()"
+              class="button is-info"
+              >Resumir</ion-button
+            >
+            <ion-button
+              color="danger"
+              size="small"
+              (click)="task.cancel()"
+              class="button is-danger"
+              >Cancelar</ion-button
+            >
+          </div>
+        </div>
+      </ion-card-content>
+    </ion-card>
+   
+   
+    <!-- <h2 text-center>Uploaded Freaky Images</h2>
+   
+    <ion-card color="light" text-center *ngFor="let item of images | async">
+      <ion-card-header>
+        <ion-card-title>
+          {{ item.name }}
+        </ion-card-title>
+      </ion-card-header>
+   
+      <ion-card-content>
+        <img [src]="item.filepath" />
+        <a [href]="item.filepath" target="_blank" rel="noopener">Download</a>
+      </ion-card-content>
+    </ion-card> -->
+
+
+  <!-- <ion-card text-center *ngIf="!isUploading && !isUploaded">
+    <ion-card-header>
+      <ion-card-title>Choose Images to Upload</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <div class="fileUpload btn btn-primary">
+        <span>Upload</span>
+        <input
+          id="uploadBtn"
+          type="file"
+          class="upload"
+          (change)="uploadFile($event.target.files)"
+        />
+      </div>
+    </ion-card-content>
+  </ion-card> -->
+
   <ion-card>
     <ion-card-content>
     <ion-item>
@@ -20,7 +113,7 @@
 
     <ion-item>
       <ion-label position="floating">Provincia</ion-label>
-      <ion-select [(ngModel)]="codProvincia" (ionChange)="changeProvincia()" 
+      <ion-select [(ngModel)]="canchaObjeto.ubicacion.codigoProvincia" (ionChange)="changeProvincia()" 
       interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
         <ion-select-option *ngFor="let ubi of ubicacion" value="{{ubi.codigoProvincia}}">{{ubi.descripcion}}</ion-select-option>
       </ion-select>
@@ -29,7 +122,7 @@
 
     <ion-item *ngIf="provincia">
       <ion-label position="floating" >Cantón</ion-label>
-      <ion-select [(ngModel)]="codCanton" interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
+      <ion-select [(ngModel)]="canchaObjeto.ubicacion.codigoCanton" interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
         <ion-select-option *ngFor="let cant of provincia.canton" value="{{cant.codigoCanton}}">{{cant.descripcion}}</ion-select-option>
       </ion-select>
     </ion-item>
@@ -123,6 +216,28 @@
         <ion-select-option *ngFor="let dia of dias" value="{{dia}}">{{dia}}</ion-select-option>
       </ion-select>
     </ion-item>
+
+    <ion-card class="ion-text-center" *ngIf="!isUploading && isUploaded">
+      <!-- <ion-card-header>
+        <ion-card-title>
+          <b>{{ fileName }}</b> Uploaded!
+        </ion-card-title>
+      </ion-card-header> -->
+   
+      <ion-card-content>
+        <div *ngIf="UploadedFileURL | async as url">
+          <img [src]="url" />
+          <a [href]="url" target="_blank" rel="noopener">Download</a>
+        </div>
+        Tamaño del archivo: {{ fileSize | fileSizePipe }}
+        <!-- <ion-button
+          expand="full"
+          color="success"
+          (click)="isUploading = isUploaded = false"
+          >Upload More</ion-button
+        > -->
+      </ion-card-content>
+    </ion-card>
 
     <ion-button (click)="guardar()" class="ion-padding" expand="block" color="secondary">GUARDAR</ion-button>
     <br>
