error con el teclado

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,10 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding" id="contenido">
-
-{{titulo}}
-
+<ion-content class="ion-padding">
   <form class="form" [formGroup]="validationsForm"  (ngSubmit)="loginUser(validationsForm.value)">
     
 
