--- a/src/app/pages/retos/retos.page.html
+++ b/src/app/pages/retos/retos.page.html
@@ -9,11 +9,14 @@
    <ion-card>
     <ion-card-content>
       <ion-list>
-        <ion-item *ngFor="let reto of retos">
+        <ion-item *ngFor="let retos of retos">
           <ion-label>
-            <h2>{{reto.region}}</h2>
-            <h3></h3>
+            <h2>{{retos.region}}</h2>
+            <h3>{{retos.summary}}</h3>
           </ion-label>
+          <ion-button fill="outline" slot="end">
+            Ver
+          </ion-button>
         </ion-item>
 
       </ion-list>
