--- a/src/app/pages/noticias/noticias.page.html
+++ b/src/app/pages/noticias/noticias.page.html
@@ -5,5 +5,21 @@
 </ion-header>
 
 <ion-content>
-noticias
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item *ngFor="let noticia of noticias">
+          <ion-label>
+            <h2>{{noticia.tipo}}</h2>
+            <h3>{{noticia.descripcion}}</h3>
+            <h5>{{noticia.usuario}}</h5>
+            <h5>{{noticia.fecha}}</h5>
+          </ion-label>
+          <ion-button fill="outline" slot="end">
+            Ver
+          </ion-button>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
