--- a/src/app/components/crear-reto/crear-reto.component.html
+++ b/src/app/components/crear-reto/crear-reto.component.html
@@ -58,7 +58,7 @@
       <div class="ion-text-start">
         <p class="ion-no-margin">Árbitro: NO</p>
         <p class="ion-no-margin">Parqueo: SI</p>
-        <p class="ion-no-margin">Bestidor: SI</p>
+        <p class="ion-no-margin">Vestidor: SI</p>
         <p class="ion-no-margin">Uniforme: NO</p>
         <p class="ion-no-margin">Costo equipo: ₡10,000</p>
         <p class="ion-no-margin">Método de Pago: en sitio</p>
