--- a/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
+++ b/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
@@ -159,7 +159,7 @@
       </ion-col>
       <ion-col size="6">
         <ion-item class="ion-no-padding">
-          <ion-label>Bestidor</ion-label>
+          <ion-label>Vestidor</ion-label>
           <ion-toggle [(ngModel)]="canchaObjeto.bestidor"></ion-toggle>
         </ion-item>
       </ion-col>
